[gd_scene load_steps=9 format=3 uid="uid://u2ew77t74om8"]

[ext_resource type="Texture2D" uid="uid://cew52eqat06oy" path="res://icons/speed.svg" id="1_5lrue"]
[ext_resource type="Script" uid="uid://b30yaatox3qn4" path="res://scripts/item_diamond.gd" id="1_kl2j7"]
[ext_resource type="Texture2D" uid="uid://bt4lhcnmbhklc" path="res://icons/heart.svg" id="2_kl2j7"]
[ext_resource type="Texture2D" uid="uid://p0fqnntvry31" path="res://icons/missile.svg" id="3_tjrvy"]
[ext_resource type="Texture2D" uid="uid://qvexg00e4yul" path="res://icons/shield.svg" id="4_i7lex"]

[sub_resource type="Animation" id="Animation_kl2j7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WhiteOutline:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BlackOutline:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BlackOutline:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5lrue"]
resource_name = "glow_outline"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WhiteOutline:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BlackOutline:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.2, 1.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BlackOutline:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kl2j7"]
_data = {
&"RESET": SubResource("Animation_kl2j7"),
&"glow_outline": SubResource("Animation_5lrue")
}

[node name="ItemDiamond" type="ColorRect"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_top = 5.0
offset_right = 40.0
offset_bottom = 155.0
grow_horizontal = 0
rotation = 0.785398
color = Color(0, 0, 0, 1)
script = ExtResource("1_kl2j7")

[node name="SpeedItem" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -18.1215
offset_top = 71.8787
offset_right = 109.879
offset_bottom = 199.879
rotation = 5.49779
texture = ExtResource("1_5lrue")

[node name="HealthItem" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -8.22168
offset_top = 81.7783
offset_right = 119.778
offset_bottom = 209.778
rotation = 5.49779
texture = ExtResource("2_kl2j7")

[node name="MissileItem" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -16.0
offset_top = 74.0
offset_right = 112.0
offset_bottom = 202.0
rotation = 5.49779
texture = ExtResource("3_tjrvy")

[node name="SpaceFiller" type="TextureRect" parent="MissileItem"]
layout_mode = 0
offset_left = 58.1506
offset_top = 44.832
offset_right = 186.151
offset_bottom = 172.832
rotation = 5.49779
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_kl2j7")

[node name="ShieldItem" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -10.3431
offset_top = 79.6569
offset_right = 117.657
offset_bottom = 207.657
rotation = 5.49779
texture = ExtResource("4_i7lex")

[node name="WhiteOutline" type="Control" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="WhiteColor" type="ColorRect" parent="WhiteOutline"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackOutline" type="Control" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="BlackColor" type="ColorRect" parent="BlackOutline"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kl2j7")
}
autoplay = "RESET"
